--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -25,7 +25,7 @@
             <td>{{this.mNumber}}</td>
             <td>{{this.email}}</td>
             <td><select>
-                    <option>Quarantined</option>
+                    <option>Blocked</option>
                     <option>User</option>
                     <option>Admin</option>
                     <option>Site Admin</option>
