--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -59,6 +59,18 @@
                 <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
+            <div class="col-sm-7">
+                <select>
+                    <option value="Blocked" id="userRole">Blocked</option>
+                    <option value="User" id="userRole">User</option>
+                    <option value="Admin" id="userRole">Admin</option>
+                    <option value="Site Admin" id="userRole">Site Admin</option>
+                </select>            
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-7">
                 <button type="submit" class="btn btn-success"><span class="fa fa-user-plus"></span>Create</button>
