--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -8,6 +8,53 @@
     <link rel="stylesheet" href="/assets/main.css" />
 </head>
 <body>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userCreateModal">Create User</button>
+    <div id="userCreateModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-header">
+                <button type="button" class="close" data-dissmiss="modal">&times;</button>
+                <h4 class="modal-title">Create New User</h4>
+            </div>
+            <div class="modal-body">
+                <form id="signup-form" method="POST" class="form-horizontal">
+                    <input type="hidden" name="_csrf" value="{{_csrf}}" />
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">Email</label>
+                        <div class="col-sm-7">
+                            <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="col-sm-3 control-label">Password</label>
+                        <div class="col-sm-7">
+                            <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+                        <div class="col-sm-7">
+                            <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
+                        <div class="col-sm-7">
+                            <select>
+                                <option value="Blocked" id="userRole">Blocked</option>
+                                <option value="User" id="userRole">User</option>
+                                <option value="Admin" id="userRole">Admin</option>
+                                <option value="Site Admin" id="userRole">Site Admin</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
+                <button type="button" class="btn btn-default" data-dissmiss="modal">Create User</button>
+            </div>
+        </div>
+    </div>
     <table class="table-striped table-condensed table-hover table table-bordered">
         <tr>
             <th>Full Name</th>
@@ -35,47 +82,5 @@
         </tr>
         {{/each}}
     </table>
-
-    <div class="page-header">
-        <h3>Create User</h3>
-    </div>
-    <form id="signup-form" method="POST" class="form-horizontal">
-        <input type="hidden" name="_csrf" value="{{_csrf}}" />
-        <div class="form-group">
-            <label for="email" class="col-sm-3 control-label">Email</label>
-            <div class="col-sm-7">
-                <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="col-sm-3 control-label">Password</label>
-            <div class="col-sm-7">
-                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
-            <div class="col-sm-7">
-                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
-            <div class="col-sm-7">
-                <select>
-                    <option value="Blocked" id="userRole">Blocked</option>
-                    <option value="User" id="userRole">User</option>
-                    <option value="Admin" id="userRole">Admin</option>
-                    <option value="Site Admin" id="userRole">Site Admin</option>
-                </select>            
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-7">
-                <button type="submit" class="btn btn-success"><span class="fa fa-user-plus"></span>Create</button>
-            </div>
-        </div>
-    </form>
 </body>
 </html>
