removed tag added tag

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -12,7 +11,7 @@
 <body>
     <div id="container">
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userCreateModal">Create User</button>
-        <div id="userCreateModal" class="modal fade" role="dialog">
+        <div id="userCreateModal" class="modal fade" srole="dialog">
             <div class="modal-dialog">
                 <div class="modal-header">
                     <button type="button" class="close" data-dissmiss="modal">&times;</button>
