--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userCreateModal">Create User</button>
-        <div id="userCreateModal" class="modal fade" srole="dialog">
+        <div id="userCreateModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-header">
                     <button type="button" class="close" data-dissmiss="modal">&times;</button>
