--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -18,7 +18,7 @@
                     <h4 class="modal-title">Create New User</h4>
                 </div>
                 <div class="modal-body">
-
+                    Content In Body
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
