--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/main.css" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
@@ -13,16 +13,18 @@
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userCreateModal">Create User</button>
         <div id="userCreateModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dissmiss="modal">&times;</button>
-                    <h4 class="modal-title">Create New User</h4>
-                </div>
-                <div class="modal-body">
-                    Content In Body
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dissmiss="modal">Create User</button>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dissmiss="modal">&times;</button>
+                        <h4 class="modal-title">Create New User</h4>
+                    </div>
+                    <div class="modal-body">
+                        Content In Body
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-default" data-dissmiss="modal">Create User</button>
+                    </div>
                 </div>
             </div>
         </div>
