--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/main.css" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div id="container">
-        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userCreateModal">Create User</button>
+        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#userCreateModal">Create User</button>
         <div id="userCreateModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
