--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="csrf-token" content="{{csrfToken}}"> -->
   <title>Custos IMS</title>
-  <link rel="stylesheet" href="/assets/main.css" />
-</head>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"></head>
 <body>
 	{{>header}}
 	<div class="container">
