--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -5,9 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/assets/main.css" />
+    <script src="/assets/lib/jquery-2.1.4.min.js"></script>
+    <script src="/assets/lib/bootstrap.min.js"></script>
+    <script src="/assets/main.js"></script>
+    <script src="/assets/application.js"></script>
 </head>
 <body>
-    <table class="table-striped table-condensed table-hover table table-bordered">
+    <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
+   
+    <div id="createUserModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dissmiss="modal">&times;</button>
+                    <h4 class="modal-title">Add New User</h4>
+                </div>
+                <div class="modal-body">
+                    Content In Body
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dissmiss="modal">Create User</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+     <table class="table-striped table-condensed table-hover table table-bordered">
         <tr>
             <th>Full Name</th>
             <th>Display Name</th>
