--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -17,15 +17,15 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dissmiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Add New User</h4>
                 </div>
                 <div class="modal-body">
                     Content In Body
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dissmiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dissmiss="modal">Create User</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Create User</button>
                 </div>
             </div>
         </div>
