--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -13,7 +13,7 @@
 <body>
     <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
    
-    <div id="createUserModal" class="modal fade" role="dialog">
+    <div id="createUserModal" class="modal fade" role="dialog" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
