--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -13,7 +13,7 @@
 <body>
     <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
    
-    <div id="createUserModal" class="modal fade" role="dialog" tabindex="-1">
+    <div id="createUserModal" class="modal fade" role="dialog" tabindex="">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -21,7 +21,39 @@
                     <h4 class="modal-title">Add New User</h4>
                 </div>
                 <div class="modal-body">
-                    Content In Body
+                    <form id="signup-form" method="POST" class="form-horizontal">
+                        <input type="hidden" name="_csrf" value="{{_csrf}}" />
+                        <div class="form-group">
+                            <label for="email" class="col-sm-3 control-label">Email</label>
+                            <div class="col-sm-7">
+                                <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="col-sm-3 control-label">Password</label>
+                            <div class="col-sm-7">
+                                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+                            <div class="col-sm-7">
+                                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
+                            <div class="col-sm-7">
+                                <select>
+                                    <option value="Blocked" id="userRole">Blocked</option>
+                                    <option value="User" id="userRole">User</option>
+                                    <option value="Admin" id="userRole">Admin</option>
+                                    <option value="Site Admin" id="userRole">Site Admin</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -58,47 +90,5 @@
         </tr>
         {{/each}}
     </table>
-
-    <div class="page-header">
-        <h3>Create User</h3>
-    </div>
-    <form id="signup-form" method="POST" class="form-horizontal">
-        <input type="hidden" name="_csrf" value="{{_csrf}}" />
-        <div class="form-group">
-            <label for="email" class="col-sm-3 control-label">Email</label>
-            <div class="col-sm-7">
-                <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="col-sm-3 control-label">Password</label>
-            <div class="col-sm-7">
-                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
-            <div class="col-sm-7">
-                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
-            <div class="col-sm-7">
-                <select>
-                    <option value="Blocked" id="userRole">Blocked</option>
-                    <option value="User" id="userRole">User</option>
-                    <option value="Admin" id="userRole">Admin</option>
-                    <option value="Site Admin" id="userRole">Site Admin</option>
-                </select>            
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-7">
-                <button type="submit" class="btn btn-success"><span class="fa fa-user-plus"></span>Create</button>
-            </div>
-        </div>
-    </form>
 </body>
 </html>
