--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -86,7 +86,7 @@
                     <option>Site Admin</option>
                 </select></td>
             <td><a href="/">Contact User</a></td>
-            <td><a data-toggle="modal" data-target="#createUserModal">Delete User</a></td>
+            <td><a data-toggle="modal" data-target="#createUserModal" data-user-id="{{this._id}}">Delete User</a></td>
         </tr>
         {{/each}}
     </table>
