--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -62,6 +62,56 @@
             </div>
         </div>
     </div>
+
+    <div id="deleteUserModal" class="modal fade" role="dialog" tabindex="">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add New User</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="signup-form" method="POST" class="form-horizontal">
+                        <input type="hidden" name="userId"/>
+                        <div class="form-group">
+                            <label for="email" class="col-sm-3 control-label">Email</label>
+                            <div class="col-sm-7">
+                                <input type="email" name="userfullname" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="col-sm-3 control-label">Password</label>
+                            <div class="col-sm-7">
+                                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+                            <div class="col-sm-7">
+                                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
+                            <div class="col-sm-7">
+                                <select>
+                                    <option value="Blocked" id="userRole">Blocked</option>
+                                    <option value="User" id="userRole">User</option>
+                                    <option value="Admin" id="userRole">Admin</option>
+                                    <option value="Site Admin" id="userRole">Site Admin</option>
+                                </select>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Create User</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
      <table class="table-striped table-condensed table-hover table table-bordered">
         <tr>
@@ -92,3 +142,16 @@
     </table>
 </body>
 </html>
+
+<script type="text/javascript">
+    $('#deleteUserModal').on('show.bs.modal', function (e) {
+
+        //get data-id attribute of the clicked element
+        var userId = $(e.relatedTarget).data('user-id');
+        var userName = $(e.relatedTarget).data('user-fullname');
+
+        //populate the textbox
+        $(e.currentTarget).find('input[name="userId"]').val(bookId);
+        $(e.currentTarget).find('input[name="userfullname"]').val(bookId);
+    });
+</script>
