Forgot to change id

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -151,7 +151,7 @@
         var userName = $(e.relatedTarget).data('user-fullname');
 
         //populate the textbox
-        $(e.currentTarget).find('input[name="userId"]').val(bookId);
-        $(e.currentTarget).find('input[name="userfullname"]').val(bookId);
+        $(e.currentTarget).find('input[name="userId"]').val(userId);
+        $(e.currentTarget).find('input[name="userfullname"]').val(userName);
     });
 </script>
