Testing form elements

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -76,7 +76,7 @@
                         <div class="form-group">
                             <label for="email" class="col-sm-3 control-label">Email</label>
                             <div class="col-sm-7">
-                                <input type="email" name="userfullname" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
+                                <input name="userfullname" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
                             </div>
                         </div>
                         <div class="form-group">
