--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -18,46 +18,14 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Add New User</h4>
+                    <h4 class="modal-title">Delete User : </h4><h4 name="usernameheader"/>
                 </div>
                 <div class="modal-body">
-                    <form id="signup-form" method="POST" class="form-horizontal">
-                        <input type="hidden" name="_csrf" value="{{_csrf}}" />
-                        <div class="form-group">
-                            <label for="email" class="col-sm-3 control-label">Email</label>
-                            <div class="col-sm-7">
-                                <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="col-sm-3 control-label">Password</label>
-                            <div class="col-sm-7">
-                                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
-                            <div class="col-sm-7">
-                                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
-                            <div class="col-sm-7">
-                                <select>
-                                    <option value="Blocked" id="userRole">Blocked</option>
-                                    <option value="User" id="userRole">User</option>
-                                    <option value="Admin" id="userRole">Admin</option>
-                                    <option value="Site Admin" id="userRole">Site Admin</option>
-                                </select>
-                            </div>
-                        </div>
-                    </form>
+                    <p>You are about to delete the profile for <p name="usernameparagraph">. This is permanent. Do you want to continue?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Create User</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Delete User</button>
                 </div>
             </div>
         </div>
@@ -152,6 +120,7 @@
 
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('input[name="userfullname"]').val(userName);
+        $(e.currentTarget).find('h4[name="usernameheader"]').val(userName);
+        $(e.currentTarget).find('h4[name="usernameparagraph"]').val(userName);
     });
 </script>
