--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -18,33 +18,15 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Delete User : </h4><h4 name="usernameheader"/>
-                </div>
-                <div class="modal-body">
-                    <p>You are about to delete the profile for <p name="usernameparagraph">. This is permanent. Do you want to continue?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Delete User</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="deleteUserModal" class="modal fade" role="dialog" tabindex="">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Add New User</h4>
                 </div>
                 <div class="modal-body">
                     <form id="signup-form" method="POST" class="form-horizontal">
-                        <input type="hidden" name="userId"/>
+                        <input type="hidden" name="_csrf" value="{{_csrf}}" />
                         <div class="form-group">
                             <label for="email" class="col-sm-3 control-label">Email</label>
                             <div class="col-sm-7">
-                                <input name="userfullname" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
+                                <input type="email" name="email" id="email" placeholder="Email" autofocus="autofocus" class="form-control" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -76,6 +58,24 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Create User</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="deleteUserModal" class="modal fade" role="dialog" tabindex="">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Delete User : </h4><h4 name="usernameheader" />
+                </div>
+                <div class="modal-body">
+                    <p>You are about to delete the profile for <p name="usernameparagraph">. This is permanent. Do you want to continue?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Delete User</button>
                 </div>
             </div>
         </div>
@@ -120,7 +120,6 @@
 
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('h4[name="usernameheader"]').val(userName);
-        $(e.currentTarget).find('h4[name="usernameparagraph"]').val(userName);
+        $(e.currentTarget).find('input[name="userfullname"]').val(userName);
     });
 </script>
