Added the javascript to populate the items

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -120,6 +120,7 @@
 
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('input[name="userfullname"]').val(userName);
+        $(e.currentTarget).find('h4[name="usernameheader"]').val(userName);
+        $(e.currentTarget).find('p[name="usernameparagraph"]').val(userName);
     });
 </script>
