Console logging for javascript find events

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -121,6 +121,8 @@
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
         $(e.currentTarget).find('h4[name="usernameheader"]').innerHTML(userName);
+        console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
+        console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
         $(e.currentTarget).find('p[name="usernameparagraph"]').innerHTML(userName);
     });
 </script>
