--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -120,9 +120,9 @@
 
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('h4[name="usernameheader"]').innerHTML(userName);
+        $(e.currentTarget).find('h4[name="usernameheader"]').text(userName);
         console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
         console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
-        $(e.currentTarget).find('p[name="usernameparagraph"]').innerHTML(userName);
+        $(e.currentTarget).find('p[name="usernameparagraph"]').text(userName);
     });
 </script>
