--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -122,7 +122,7 @@
         $(e.currentTarget).find('input[name="userId"]').val(userId);
         $(e.currentTarget).find('h4[name="usernameheader"]').text(userName);
         console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
-        console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
+        console.log($(e.currentTarget).find('p[name="usernameparagraph"]'));
         $(e.currentTarget).find('p[name="usernameparagraph"]').text(userName);
     });
 </script>
