--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -121,8 +121,6 @@
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
         $(e.currentTarget).find('h4[name="usernameheader"]').text(userName);
-        console.log($(e.currentTarget).find('h4[name="usernameheader"]'));
-        console.log($(e.currentTarget).find('p[name="usernameparagraph"]'));
-        $(e.currentTarget).find('p[name="usernameparagraph"]').text(userName);
+        $(e.currentTarget).find('p[name="usernameparagraph"]').innerText = userName;
     });
 </script>
