Fix for user data not being populated
replaced this.fullName with the proper entity this.profile.fullName.

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -104,7 +104,7 @@
                     <option>Site Admin</option>
                 </select></td>
             <td><a href="/">Contact User</a></td>
-            <td><a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.fullName}}">Delete User</a></td>
+            <td><a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}}">Delete User</a></td>
         </tr>
         {{/each}}
     </table>
