Fix dialog header not displaying properly

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -68,7 +68,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Delete User : </h4><h4 name="usernameheader" />
+                    <h4 class="modal-title" name="usernameheader"></h4>
                 </div>
                 <div class="modal-body">
                     <p>You are about to delete the profile for <p name="usernameparagraph">. This is permanent. Do you want to continue?</p>
@@ -120,7 +120,7 @@
         console.log(userName);
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('h4[name="usernameheader"]').text(userName);
+        $(e.currentTarget).find('h4[name="usernameheader"]').text("Delete User: " + userName);
         $(e.currentTarget).find('p[name="usernameparagraph"]').innerHTML = userName;
     });
 </script>
