--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -75,7 +75,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Delete User</button>
+                    <button type="button" class="btn btn-default" onclick="deleteUser()" data-dismiss="modal">Delete User</button>
                 </div>
             </div>
         </div>
@@ -133,4 +133,8 @@
         }
        
     });
+
+    function deleteUser() {
+        alert('UserDeleted');
+    }
 </script>
