--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -67,6 +67,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                    <input type="hidden" name="userId" id="userId" />
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title" name="usernameheader"></h4>
                 </div>
@@ -135,6 +136,8 @@
     });
 
     function deleteUser() {
-        alert('UserDeleted');
+        var userId = $('#userId').val();
+        alert(userId);
+
     }
 </script>
