Added actual ajax request
passes on the user id to the proper route

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -137,7 +137,12 @@
 
     function deleteUser() {
         var userId = $('#userId').val();
-        alert(userId);
+        $.ajax({
+            url: 'deleteUser',
+            data: userId,
+            success: function (data) {
+            }
+        });
 
     }
 </script>
