--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -139,7 +139,7 @@
         var userId = $('#userId').val();
         $.ajax({
             url: '/deleteUser',
-            data: userId,
+            data: { "userId": userId },
             type: "POST",
             success: function (data) {
             }
