added email body text area to modal

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -107,7 +107,7 @@
                         <div class="form-group">
                             <label for="body" class="col-sm-3 control-label">Body</label>
                             <div class="col-sm-7">
-                                
+                                <textarea name="body" id="body"></textarea>
                             </div>
                         </div>
                         </form>
