dialog styling changes

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -83,7 +83,7 @@
     </div>
 
     <div id="contactUserModal" class="modal fade" role="dialog" tabindex="">
-        <div class="modal-dialog" style="width: auto">
+        <div class="modal-dialog" style="width: 150px">
             <div class="modal-content">
                 <div class="modal-header">
                     <input type="hidden" name="userId" id="userId" />
