form styling changes

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -91,7 +91,7 @@
                     <h4 class="modal-title" name="usernameheader">Contact User</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="contact" name="contact">
+                    <form class="contact form-horizontal" name="contact">
                         <label class="label" for="name">Your Name</label><br>
                         <input type="text" name="name" class="input-xlarge"><br>
                         <label class="label" for="email">Your E-mail</label><br>
