changes to the ajax posting to populate the values

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -211,8 +211,11 @@
         }
 
         function contactUser() {
-            var userEmail;
-            var emailBody;
+            var userEmail = $('#email').val;
+            var emailSubject = $('#subject');
+            var emailBody = $('#body');
+
+            alert(userEmail + " " + emailSubject + " " + emailBody);
             $.ajax({
                 url: '/contactUser',
                 dataType: 'json',
