fix for incorrect use of val

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -211,9 +211,9 @@
         }
 
         function contactUser() {
-            var userEmail = $('#email').val;
-            var emailSubject = $('#subject');
-            var emailBody = $('#body');
+            var userEmail = $('#email').val();
+            var emailSubject = $('#subject').val();
+            var emailBody = $('#body').val();
 
             alert(userEmail + " " + emailSubject + " " + emailBody);
             $.ajax({
