forgot # on selector. that tends to break things.

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -190,9 +190,9 @@
     }
 
         function createUser() {
-            var userEmail = $('email').val();
-            var mNumber = $('mNumber').val();
-            var roleName = $('roleName').val();
+            var userEmail = $('#email').val();
+            var mNumber = $('#mNumber').val();
+            var roleName = $('#roleName').val();
 
             console.log(roleName);
             console.log(mNumber);
