Dropdown still undefined

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -194,9 +194,7 @@
             var mNumber = $('#mNumber').val();
             var roleName = $('#userRole');
 
-            var roleSelected = roleName.options[roleName.selectedIndex].value;
-
-            console.log(roleSelected);
+            console.log(roleName);
             console.log(mNumber);
             console.log(userEmail);
 
