update to jquery selector

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -192,7 +192,7 @@
         function createUser() {
             var userEmail = $('#email').val();
             var mNumber = $('#mNumber').val();
-            var roleName = $('#userRole').options;
+            var roleName = $('#userRole')[0].options;
 
             console.log(roleName);
             console.log(mNumber);
