still not working

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -148,7 +148,7 @@
 
 <script type="text/javascript">
 
-    Handlebars.registerHelper("select", function (value, options) {
+    window.Handlebars.registerHelper("select", function (value, options) {
         var $el = $('<select />').html(options.fn(this));
         $el.find('[value="' + value + '"]').attr({ 'selected': 'selected' });
         return $el.html();
