--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -129,12 +129,14 @@
             <td>{{this.mNumber}}</td>
             <td>{{this.email}}</td>
             <td>
+                {{#select this.profile.roleName}}
                 <select>
                     <option>Blocked</option>
                     <option>User</option>
                     <option>Admin</option>
                     <option>Site Admin</option>
                 </select>
+                {{/select}}
             </td>
             <td><a data-toggle="modal" data-target="#contactUserModal" data-user-email="{{this.email}}">Contact User</a></td>
             <td><a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}}" data-user-email="{{this.email}}">Delete User</a></td>
