added code to set profile properties

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -131,10 +131,10 @@
             <td>
                 <select>
                     {{#select this.profile.roleName}}
-                    <option>Blocked</option>
-                    <option>User</option>
-                    <option>Admin</option>
-                    <option>Site Admin</option>
+                    <option value="Blocked">Blocked</option>
+                    <option value="User">User</option>
+                    <option value="Admin">Admin</option>
+                    <option value="SiteAdmin">Site Admin</option>
                     {{/select}}
                 </select>
             </td>
